[tool.poetry]
name = "arrowflights3example"
version = "0.1.0"
description = ""
authors = ["Christian Casazza"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^16.0.0"
s3fs = "^2024.3.1"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
pandas = "^2.2.2"
duckdb = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
